--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,20 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
+  camera: ^0.10.5+5
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.1
+  flutter_screenutil: ^5.9.0
   freezed_annotation: ^2.2.0
+  get_it: ^7.6.4
   go_router: ^12.0.1
   hooks_riverpod: ^2.0.2
+  image:
+  matrix2d: ^1.0.4
+  tflite_flutter: ^0.10.3
+  tflite_flutter_helper_plus: ^0.0.2
 
 dev_dependencies:
   flutter_test:
