--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_config: ^2.0.2
   flutter_hooks: ^0.20.1
+  flutter_svg: ^2.0.9
   freezed_annotation: ^2.2.0
   go_router: ^12.0.1
   google_maps_flutter: ^2.5.0
@@ -29,3 +30,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/imgs/kani.png
