--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/imgs/kani.png":["assets/imgs/kani.png"]}
+{"assets/icons/crown.svg":["assets/icons/crown.svg"],"assets/icons/medal.svg":["assets/icons/medal.svg"],"assets/icons/person.svg":["assets/icons/person.svg"],"assets/icons/star.svg":["assets/icons/star.svg"],"assets/imgs/kani.png":["assets/imgs/kani.png"]}
