--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_config: ^2.0.2
   flutter_hooks: ^0.20.1
   freezed_annotation: ^2.2.0
+  geolocator: ^10.1.0
   go_router: ^12.0.1
   google_maps_flutter: ^2.5.0
   hooks_riverpod: ^2.0.2
