--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 
 dependencies:
   camera: ^0.10.5+5
+  dio: ^5.3.3
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
@@ -20,6 +21,8 @@ dependencies:
   go_router: ^12.0.1
   google_maps_flutter: ^2.5.0
   hooks_riverpod: ^2.0.2
+  image_gallery_saver: ^2.0.3
+  path_provider: ^2.1.1
   supabase_flutter: ^1.10.24
 
 dev_dependencies:
