--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
 
   workflow_dispatch:
 
+
+env:
+  SUPABASE_URL: ${{secrets.SUPABASE_URL}}
+  SUPABASE_KEY: ${{secrets.SUPABASE_KEY}}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,9 +33,10 @@ jobs:
           flutter-version: '3.13.0'
           channel: 'stable'
           cache: true
+      - run: echo '{"SUPABASE_URL":${{ SUPABASE_URL }}, "SUPABASE_KEY":{{ SUPABASE_KEY }}}' >> api_key.json
       - run: flutter --version
       - run: flutter pub get
-      - run: flutter build web --base-href /${{ steps.version.outputs.repository }}/
+      - run: flutter build web --base-href /${{ steps.version.outputs.repository }}/ --dart-define-from-file=api_key.json
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
