--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           cache: true
       - run: flutter --version
       - run: flutter pub get
-      - run: flutter build web --base-href /${{ steps.version.outputs.repository }}/ --dart-define=SUPABASE_KEY=${{secrets.SUPABASE_KEY}} --dart-define=SUPABASE_URL=${{secrects.SUPABASE_URL}}
+      - run: flutter build web --base-href /${{ steps.version.outputs.repository }}/ --dart-define=SUPABASE_KEY=${{secrets.SUPABASE_KEY}} --dart-define=SUPABASE_URL=${{secrets.SUPABASE_URL}}
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
