--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,12 +6,15 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-   		<key>NSAllowsArbitraryLoads</key><true/>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>カメラを使用します</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>マイクを使用します</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>アイコン画像を選ぶのに使用します</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
