--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,9 @@ dependencies:
   go_router: ^12.0.1
   google_maps_flutter: ^2.5.0
   hooks_riverpod: ^2.0.2
+  image: ^4.1.3
   image_gallery_saver: ^2.0.3
+  image_picker: ^1.0.4
   lottie: ^2.7.0
   path_provider: ^2.1.1
   shared_preferences: ^2.2.2
